[#16310] fix JDK version incompatibility